--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -23,7 +23,13 @@
     </select>
 
     <label for="uppercase">Uppercase</label>
-    <input type="checkbox" name="uppdercase", id="uppercase">
+    <input type="checkbox" name="uppercase", id="uppercase">
+
+    <label for="special">Special Characters</label>
+    <input type="checkbox" name="special", id="special">
+
+    <label for="numbers">Numbers</label>
+    <input type="checkbox" name="numbers", id="numbers">
 
     <button>Generate password</button>
 
